<resources>
    <string name="app_name">Locally</string>
    <string name="app_slogan">Keeping it farm fresh since 2016</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_vendor_list">VendorListActivity</string>
    <string name="title_activity_vendor_details">VendorDetails</string>
    <string name="title_activity_reset">Reset Password</string>
    <string name="title_activity_verify">Verify Email</string>

    //to be modified later
    <string name="market_name">Market Name</string>
    <string name="market_id">Market ID</string>
    <string name="market_location">Market Location</string>
    <string name="market_description">Market Description</string>
    <string name="directions"><u>Directions</u></string>
    <string name="market_dates">Market Dates</string>
    <string name="market_days">Market Days</string>
    <string name="b1">IN SEASON</string>
    <string name="b3">Over 30 Vendors! Check Them Out!</string>
    <string name="b4">Check Out Market Produce</string>
    <string name="b2">FIND YOUR VENDOR</string>
    <string name="title">FIND YOUR MARKET</string>

    <string name="test_vendor_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>

    <!-- Used to change action bar title when switching between fragments -->
    <string name="title_fragment_maps">Map</string>
    <string name="title_fragment_market_list">Market List</string>
    <string name="title_fragment_calendar">Market Calendar</string>
    <string name="title_fragment_market_description">Market Description</string>
    <string name="title_fragment_grocery_list">Your Grocery List</string>
    <string name="title_fragment_in_season">Produce In Season</string>
    <string name="title_fragment_vendors_search_results_list">Search Results</string>
    <string name="title_fragment_settings">Settings</string>

    <!--For the enable permission/turn on location card on content main-->
    <string name="rationale_enable_permissions">We use your location data to customize your experience. Please allow location permissions in App Settings for additional functionality.</string>
    <string name="rationale_turn_on_location">We use your location data to customize your experience. Please turn on location services for additional functionality.</string>
    <string name="button_enable_permissions">Enable Permissions</string>
    <string name="button_refresh">Refresh</string>
    <string name="title_activity_about_us">AboutUsActivity</string>

    <!--Dialog strings for vendor screens-->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_message_sign_out">Are you sure you want to sign out?</string>
    <string name="dialog_message_discard_changes">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
</resources>
