<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tablelayout"
    android:stretchColumns="*">

    <TextView
        android:id="@+id/market_name"
        android:text="@string/market_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#0091ea"
        android:gravity="center"
        android:textSize="18sp"
        android:clickable="true"
        android:onClick="displayMarket"
        android:padding="5dip"
        android:layout_marginTop="5dip"/>

    <TextView
        android:id="@+id/market_location"
        android:text="@string/market_location"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:textColor="#546e7a"
        android:gravity="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/market_dates"
        android:text="@string/market_dates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#546e7a"
        android:gravity="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/market_days"
        android:text="@string/market_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#546e7a"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginBottom="5dip" />

    <TextView
        android:id="@+id/market_id"
        android:text="@string/market_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_marginBottom="5dip" />


</TableLayout>