<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/market_description_fragment"
    android:stretchColumns="*">

    <TextView
        android:id="@+id/market_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/market_name"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="20sp"
        android:textColor="#4c516d"
        />

    <TextView
        android:id="@+id/market_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textStyle="bold"
        android:textColor="#4c516d"
        />

    <TextView
        android:id="@+id/market_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/market_days"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#4c516d"
        />

    <TextView
        android:id="@+id/market_year_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/market_dates"
        android:textSize="15sp"
        android:paddingLeft="16dp"
        android:paddingBottom="8dp"
        android:textStyle="bold"
        android:textColor="#4c516d"
        />

    <WebView
        android:id="@+id/market_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/market_description"
        android:textColor="#4c516d"
        />

    <TextView
        android:id="@+id/market_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/market_location"
        android:textSize="15sp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingRight="16dp"
        android:textStyle="bold"
        android:textColor="#4c516d"
        />
    <TextView
        android:id="@+id/market_directions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/directions"
        android:paddingTop="10dp"
        android:paddingBottom="2dp"
        android:textStyle="bold"
        android:textColor="#4c516d"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        />

    <com.google.android.gms.maps.MapView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/market_map_preview"
        android:adjustViewBounds="true"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scrollbars="vertical">
    </com.google.android.gms.maps.MapView>

</TableLayout>

