<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/activity_market"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/market_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/market_name"
        android:textSize="30sp"
        android:padding="5dp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:textColor="#00d2ff"
        android:layout_alignParentLeft="true"
        />

    <TextView
        android:id="@+id/market_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/market_description"
        android:paddingTop="10dp"
        android:textSize="14sp"
        android:padding="5dp"
        android:layout_below="@id/market_name"
        android:textColor="#4c516d"
        android:textAppearance="?android:textAppearanceLarge"
        />

    <TextView
        android:id="@+id/market_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/market_location"
        android:paddingTop="10dp"
        android:textSize="14sp"
        android:padding="5dp"
        android:textStyle="bold"
        android:layout_below="@id/market_description"
        android:textColor="#4c516d"
        android:layout_alignParentLeft="true"
        />
    <TextView
        android:id="@+id/market_directions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/directions"
        android:paddingTop="10dp"
        android:textStyle="bold"
        android:layout_below="@id/market_location"
        android:textColor="#4c516d"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:textAppearanceMedium"
        />

    <ImageView
        android:contentDescription="Specs"
        android:adjustViewBounds="true"
        android:layout_below="@id/market_directions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:src="@drawable/map" >
    </ImageView>

</RelativeLayout>

