<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_marginTop="5dip"
        android:textStyle="bold"
        android:textColor="#00bfa5"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:textAppearanceLarge"
        />

    <View android:id="@+id/fakeView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"/>

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textSize="18sp"
        android:background="@drawable/button_shape"
        android:textColor="#546e7a"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@id/fakeView"
        android:text="@string/b2"/>

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="#546e7a"
        android:background="@drawable/button_shape"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@id/fakeView"
        android:text="@string/b1"/>

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnWidth="200dp"
        android:numColumns="2"
        android:layout_below="@id/title_view"
        android:layout_above="@id/button_1"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        />
</RelativeLayout>




